layout bug fix on iphone 5

--- a/app/components/gameresult/gameresult.css
+++ b/app/components/gameresult/gameresult.css
@@ -19,7 +19,7 @@ button {
     color: darkslategray;
     text-align: center;
     font-family: 'MobileFont';
-    margin-top: 250px
+    margin-top: 250px;
 }
 
 .madeby {
